--- a/views/partials/admin_header.ejs
+++ b/views/partials/admin_header.ejs
@@ -29,7 +29,7 @@
   </nav>
 
 <body>
-  <div class="container">
+  <div class="container container-wrap">
     <%- messages('messages', locals) %>
 
     <%  if(errors){%>
